Changed some hints and added some features in the GUI

--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,7 @@ thead {
 }
 
 p.input-addon-login {
-    text-align: right;
+    text-align: left;
     width: 175px;
 }
 
@@ -149,7 +149,7 @@ input.btn {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 99; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -177,6 +177,7 @@ input.btn {
     padding: 20px;
     border: 1px solid #888;
     width: 90%;
+    z-index: 99;
 }
 
 /* The Button to close the modal */
