--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,30 @@ body {
     margin-top: 30px;
 }
 
+
+/*Gameview styles*/
+
+.carousel {
+    margin-top: 5%;
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+    width: 65%;
+    margin-left: 5%;
+}
+
+.menu {
+    margin-top: 3%;
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+    width: 30%;
+}
+.menubtn {
+    float: right;
+    margin-right: 30px;
+}
+
 /* Styles the mainscreen buttons */
 .button {
     width: 200px;
