--- a/style/style.css
+++ b/style/style.css
@@ -7,16 +7,20 @@ body {
     border: solid 1px white;
     border-radius: 3px;
     display: inline;
-    float: left;
-
+    text-align: left;
+    padding-left: 3px;
+    padding-right: 3px;
 }
 
 .statusPuzzle {
     font-weight: bold;
+    font-size: large;
     background-color: white;
     color: red;
     display: inline;
-    float: right;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 main > section {
@@ -226,7 +230,7 @@ input.btn {
     color: #f6931f;
     font-weight: bold;
     float: right;
-    width: 120px;
+    width: 70px;
     text-align: center;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -257,15 +261,15 @@ form > input {
 }
 
 /* The Button to close the modal */
-#closeModal {
+.closeModal {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-#closeModal:hover,
-#closeModal:focus {
+.closeModal:hover,
+.closeModal:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
